--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "dependencies": {},
   "devDependencies": {
     "jasmine-core": "^2.3.2",
+    "jasmine-sinon": "^0.4.0",
     "karma": "^0.12.31",
     "karma-jasmine": "^0.3.5",
+    "karma-ng-html2js-preprocessor": "*",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-ng-html2js-preprocessor": "*"
+    "karma-sinon": "^1.0.4",
+    "sinon": "^1.14.1"
   }
 }
