--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jasmine-sinon": "^0.4.0",
     "karma": "^0.12.31",
     "karma-jasmine": "^0.3.5",
+    "karma-mocha-reporter": "^1.0.2",
     "karma-ng-html2js-preprocessor": "*",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.4",
