--- a/package.json
+++ b/package.json
@@ -28,14 +28,22 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-karma": "^0.10.1",
     "jasmine-core": "^2.3.2",
     "jasmine-sinon": "^0.4.0",
+    "jshint-stylish": "^1.0.2",
     "karma": "^0.12.31",
     "karma-jasmine": "^0.3.5",
     "karma-mocha-reporter": "^1.0.2",
     "karma-ng-html2js-preprocessor": "*",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.4",
-    "sinon": "^1.14.1"
+    "load-grunt-tasks": "^3.1.0",
+    "sinon": "^1.14.1",
+    "time-grunt": "^1.2.0"
   }
 }
